--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "astro-spaceships",
-  "description": "Astro Spaceships",
+  "name": "@area44/astro-everest",
+  "description": "The image gallery was built with Alpine.js and TailwindCSS",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.1.0",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
