--- a/package.json
+++ b/package.json
@@ -8,17 +8,24 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "format": "prettier -w . --cache"
   },
   "dependencies": {
     "@astrojs/alpinejs": "^0.2.2",
     "@astrojs/tailwind": "^4.0.0",
     "alpinejs": "^3.12.2",
     "astro": "^2.7.0",
+    "postcss": "8.4.24",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
-    "@types/alpinejs": "^3.7.2"
+    "@types/alpinejs": "^3.7.2",
+    "@types/node": "20.3.1",
+    "@types/react": "^18.2.13",
+    "@types/react-dom": "^18.2.6",
+    "prettier": "^2.8.8",
+    "prettier-plugin-astro": "^0.10.0",
+    "prettier-plugin-tailwindcss": "^0.3.0"
   },
   "packageManager": "pnpm@8.6.5"
 }
