--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,5 @@
 # To get started with Astro see: https://docs.astro.build/en/getting-started
-name: Deploy Astro site to Pages
+name: Build with Astro
 
 on:
   pull_request:
