--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "devDependencies": {
     "@types/alpinejs": "^3.7.2",
-    "@types/node": "20.4.10",
+    "@types/node": "^20.4.10",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "prettier": "^3.0.1",
