--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@area44/astro-everest",
-  "version": "23.9.26",
+  "version": "23.9.30",
   "private": true,
-  "description": "An image gallery built with Alpine.js and TailwindCSS",
+  "description": "An image gallery built with Astro, Alpine.js and Tailwind CSS",
   "scripts": {
     "build": "astro build",
     "dev": "astro dev",
