--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -26,10 +26,17 @@ jobs:
     steps:
       - name: Checkout your repository using git
         uses: actions/checkout@v4
-      - name: Setup Node
-        uses: actions/setup-node@v4
+
       - name: Install pnpm
         uses: pnpm/action-setup@v2
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: .nvmrc
+          cache: pnpm
+          cache-dependency-path: pnpm-lock.yaml
+
       - name: Restore Astro cache
         uses: actions/cache@v3
         with:
@@ -38,10 +45,13 @@ jobs:
           key: ${{ runner.os }}-astro-build-${{ hashFiles('dist', '**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-astro-build-
+
       - name: Install dependencies
         run: pnpm install
+
       - name: Build with Astro
         run: pnpm build
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
