--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@astrojs/alpinejs": "^0.4.1",
-    "@astrojs/tailwind": "^5.1.4",
+    "@tailwindcss/vite": "4.0.0",
     "alpinejs": "^3.14.8",
     "astro": "^5.1.7",
     "tailwindcss": "^4.0.0"
