--- a/package.json
+++ b/package.json
@@ -18,13 +18,9 @@
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
     "@types/alpinejs": "^3.13.11",
-    "@types/node": "^22.10.7",
-    "@types/react": "^19.0.7",
-    "@types/react-dom": "^19.0.3",
-    "prettier": "^3.4.2",
-    "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.10"
+    "@types/node": "^22.10.7"
   },
   "packageManager": "pnpm@9.15.4"
 }
