--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@astrojs/alpinejs": "^0.4.3",
-    "@astrojs/tailwind": "^5.1.5",
+    "@tailwindcss/vite": "^4.0.0",
     "alpinejs": "^3.14.8",
     "astro": "^5.1.9",
     "tailwindcss": "^3.4.17"
