--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,10 @@
 {
-  "$schema": "https://json.schemastore.org/tsconfig",
+  "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "target": "ESNext",
-    "module": "ESNext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "forceConsistentCasingInFileNames": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "verbatimModuleSyntax": true,
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
     },
-    "ignoreDeprecations": "5.0",
-    "allowJs": true
   },
-  "include": ["./src/env.d.ts", "**/*.{ts}", "**/*.{tsx}"],
   "exclude": ["node_modules"]
 }
