chore: update script

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "build": "astro build",
     "dev": "astro dev",
-    "format": "prettier -w . --cache",
     "preview": "astro preview",
-    "start": "astro dev"
+    "start": "astro dev",
+    "format": "biome format --write ."
   },
   "dependencies": {
     "@astrojs/alpinejs": "^0.4.3",
